--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
         <script src="js/application.js"></script>
         <script src="js/services.js"></script>
+        <script src="js/responseStringify.js" type="text/javascript"></script>
         <script src="js/controllers.js"></script>
         <script src="js/filters.js"></script>
         <script src="js/directives.js"></script>
