--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <script src="js/application.js"></script>
         <script src="js/services.js"></script>
         <script src="js/responseStringify.js" type="text/javascript"></script>
+        <script src="js/userService.js" type="text/javascript"></script>
         <script src="js/controllers.js"></script>
         <script src="js/filters.js"></script>
         <script src="js/directives.js"></script>
